--- a/wheelOffortune.html
+++ b/wheelOffortune.html
@@ -317,327 +317,169 @@
         background: red;
       }
     }
-    .circle1{
+    .circle-design {
       position:absolute;
       width:6px;
       height:6px;
       border-radius:50%;
+    }
+    .circle1{
       left: 14px;
       top: 4px;
     }
     .circle2{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 27px;
       top: 4px;
     }
     .circle3{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 42px;
       top: 4px;
     }
     .circle4{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 55px;
       top: 4px;
     }
     .circle5{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 70px;
       top: 4px;
     }
     .circle6{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 85px;
       top: 4px;
     }
     .circle7{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 100px;
       top: 4px;
     }
     .circle8{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 115px;
       top: 4px;
     }
     .circle9{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 130px;
       top: 4px;
     }
     .circle10{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 145px;
       top: 4px;
     }
     .circle11{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 160px;
       top: 4px;
     }
     .circle12{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 175px;
       top: 4px;
     }
     .circle13{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 190px;
       top: 4px;
     }
     .circle14{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 205px;
       top: 4px;
     }
     .circle15{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 220px;
       top: 4px;
     }
     .circle16{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 235px;
       top: 4px;
     }
     .circle17{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
-      background: white;
       left: 248px;
       top: 15px;
     }
     .circle18{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
-      background: white;
       left: 248px;
       top: 30px;
     }
     .circle19{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
-      background: white;
       left: 248px;
       top: 45px;
     }
     .circle20{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
-      background: white;
       left: 248px;
       top: 60px;
     }
     .circle21{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 233px;
       top: 68px;
     }
     .circle22{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 218px;
       top: 68px;
     }
     .circle23{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 203px;
       top: 68px;
     }
     .circle24{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 188px;
       top: 68px;
     }
     .circle25{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 173px;
       top: 68px;
     }
     .circle26{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 158px;
       top: 68px;
     }
     .circle27{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 143px;
       top: 68px;
     }
     .circle28{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 128px;
       top: 68px;
     }
     .circle29{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 113px;
       top: 68px;
     }
     .circle30{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 98px;
       top: 68px;
     }
     .circle31{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 83px;
       top: 68px;
     }
     .circle32{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 70px;
       top: 68px;
     }
     .circle33{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 56px;
       top: 68px;
     }
     .circle34{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 43px;
       top: 68px;
     }
     .circle35{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 30px;
       top: 68px;
     }
     .circle36{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 15px;
       top: 68px;
     }
     .circle37{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 5px;
       top: 60px;
     }
     .circle38{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 5px;
       top: 45px;
     }
     .circle39{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 5px;
       top: 30px;
     }
     .circle40{
-      position:absolute;
-      width:6px;
-      height:6px;
-      border-radius:50%;
       left: 5px;
       top: 15px;
     }
@@ -649,46 +491,46 @@
   <div class="main-container">
     <div id="header-text-responsive">
       <div class="outerbox">
-        <div class="circle1 odd"></div>
-        <div class="circle2 even"></div>
-        <div class="circle3 odd"></div>
-        <div class="circle4 even"></div>
-        <div class="circle5 odd"></div>
-        <div class="circle6 even"></div>
-        <div class="circle7 odd"></div>
-        <div class="circle8 even"></div>
-        <div class="circle9 odd"></div>
-        <div class="circle10 even"></div>
-        <div class="circle11 odd"></div>
-        <div class="circle12 even"></div>
-        <div class="circle13 odd"></div>
-        <div class="circle14 even"></div>
-        <div class="circle15 odd"></div>
-        <div class="circle16 even"></div>
-        <div class="circle17 odd"></div>
-        <div class="circle18 even"></div>
-        <div class="circle19 odd"></div>
-        <div class="circle20 even"></div>
-        <div class="circle21 odd"></div>
-        <div class="circle22 even"></div>
-        <div class="circle23 odd"></div>
-        <div class="circle24 even"></div>
-        <div class="circle25 odd"></div>
-        <div class="circle26 even"></div>
-        <div class="circle27 odd"></div>
-        <div class="circle28 even"></div>
-        <div class="circle29 odd"></div>
-        <div class="circle30 even"></div>
-        <div class="circle31 odd"></div>
-        <div class="circle32 even"></div>
-        <div class="circle33 odd"></div>
-        <div class="circle34 even"></div>
-        <div class="circle35 odd"></div>
-        <div class="circle36 even"></div>
-        <div class="circle37 odd"></div>
-        <div class="circle38 even"></div>
-        <div class="circle39 odd"></div>
-        <div class="circle40 even"></div>
+        <div class="circle-design circle1 odd"></div>
+        <div class="circle-design circle2 even"></div>
+        <div class="circle-design circle3 odd"></div>
+        <div class="circle-design circle4 even"></div>
+        <div class="circle-design circle5 odd"></div>
+        <div class="circle-design circle6 even"></div>
+        <div class="circle-design circle7 odd"></div>
+        <div class="circle-design circle8 even"></div>
+        <div class="circle-design circle9 odd"></div>
+        <div class="circle-design circle10 even"></div>
+        <div class="circle-design circle11 odd"></div>
+        <div class="circle-design circle12 even"></div>
+        <div class="circle-design circle13 odd"></div>
+        <div class="circle-design circle14 even"></div>
+        <div class="circle-design circle15 odd"></div>
+        <div class="circle-design circle16 even"></div>
+        <div class="circle-design circle17 odd"></div>
+        <div class="circle-design circle18 even"></div>
+        <div class="circle-design circle19 odd"></div>
+        <div class="circle-design circle20 even"></div>
+        <div class="circle-design circle21 odd"></div>
+        <div class="circle-design circle22 even"></div>
+        <div class="circle-design circle23 odd"></div>
+        <div class="circle-design circle24 even"></div>
+        <div class="circle-design circle25 odd"></div>
+        <div class="circle-design circle26 even"></div>
+        <div class="circle-design circle27 odd"></div>
+        <div class="circle-design circle28 even"></div>
+        <div class="circle-design circle29 odd"></div>
+        <div class="circle-design circle30 even"></div>
+        <div class="circle-design circle31 odd"></div>
+        <div class="circle-design circle32 even"></div>
+        <div class="circle-design circle33 odd"></div>
+        <div class="circle-design circle34 even"></div>
+        <div class="circle-design circle35 odd"></div>
+        <div class="circle-design circle36 even"></div>
+        <div class="circle-design circle37 odd"></div>
+        <div class="circle-design circle38 even"></div>
+        <div class="circle-design circle39 odd"></div>
+        <div class="circle-design circle40 even"></div>
         <div class="innerbox ">
           <span class="stw-text">SPIN THE WHEEL</span>
         </div>
@@ -697,46 +539,46 @@
     <div id="offer">
       <div class="header-text">
         <div class="outerbox">
-          <div class="circle1 odd"></div>
-          <div class="circle2 even"></div>
-          <div class="circle3 odd"></div>
-          <div class="circle4 even"></div>
-          <div class="circle5 odd"></div>
-          <div class="circle6 even"></div>
-          <div class="circle7 odd"></div>
-          <div class="circle8 even"></div>
-          <div class="circle9 odd"></div>
-          <div class="circle10 even"></div>
-          <div class="circle11 odd"></div>
-          <div class="circle12 even"></div>
-          <div class="circle13 odd"></div>
-          <div class="circle14 even"></div>
-          <div class="circle15 odd"></div>
-          <div class="circle16 even"></div>
-          <div class="circle17 odd"></div>
-          <div class="circle18 even"></div>
-          <div class="circle19 odd"></div>
-          <div class="circle20 even"></div>
-          <div class="circle21 odd"></div>
-          <div class="circle22 even"></div>
-          <div class="circle23 odd"></div>
-          <div class="circle24 even"></div>
-          <div class="circle25 odd"></div>
-          <div class="circle26 even"></div>
-          <div class="circle27 odd"></div>
-          <div class="circle28 even"></div>
-          <div class="circle29 odd"></div>
-          <div class="circle30 even"></div>
-          <div class="circle31 odd"></div>
-          <div class="circle32 even"></div>
-          <div class="circle33 odd"></div>
-          <div class="circle34 even"></div>
-          <div class="circle35 odd"></div>
-          <div class="circle36 even"></div>
-          <div class="circle37 odd"></div>
-          <div class="circle38 even"></div>
-          <div class="circle39 odd"></div>
-          <div class="circle40 even"></div>
+          <div class="circle-design circle1 odd"></div>
+          <div class="circle-design circle2 even"></div>
+          <div class="circle-design circle3 odd"></div>
+          <div class="circle-design circle4 even"></div>
+          <div class="circle-design circle5 odd"></div>
+          <div class="circle-design circle6 even"></div>
+          <div class="circle-design circle7 odd"></div>
+          <div class="circle-design circle8 even"></div>
+          <div class="circle-design circle9 odd"></div>
+          <div class="circle-design circle10 even"></div>
+          <div class="circle-design circle11 odd"></div>
+          <div class="circle-design circle12 even"></div>
+          <div class="circle-design circle13 odd"></div>
+          <div class="circle-design circle14 even"></div>
+          <div class="circle-design circle15 odd"></div>
+          <div class="circle-design circle16 even"></div>
+          <div class="circle-design circle17 odd"></div>
+          <div class="circle-design circle18 even"></div>
+          <div class="circle-design circle19 odd"></div>
+          <div class="circle-design circle20 even"></div>
+          <div class="circle-design circle21 odd"></div>
+          <div class="circle-design circle22 even"></div>
+          <div class="circle-design circle23 odd"></div>
+          <div class="circle-design circle24 even"></div>
+          <div class="circle-design circle25 odd"></div>
+          <div class="circle-design circle26 even"></div>
+          <div class="circle-design circle27 odd"></div>
+          <div class="circle-design circle28 even"></div>
+          <div class="circle-design circle29 odd"></div>
+          <div class="circle-design circle30 even"></div>
+          <div class="circle-design circle31 odd"></div>
+          <div class="circle-design circle32 even"></div>
+          <div class="circle-design circle33 odd"></div>
+          <div class="circle-design circle34 even"></div>
+          <div class="circle-design circle35 odd"></div>
+          <div class="circle-design circle36 even"></div>
+          <div class="circle-design circle37 odd"></div>
+          <div class="circle-design circle38 even"></div>
+          <div class="circle-design circle39 odd"></div>
+          <div class="circle-design circle40 even"></div>
           <div class="innerbox ">
             <div class="stw-text">SPIN THE WHEEL</div>
           </div>
